tests/baselines/reference/nonMergedDeclarationsAndOverloads.errors.txt
tests/cases/compiler/nonMergedDeclarationsAndOverloads.ts(2,5): error TS2300: Duplicate identifier 'm1'.
tests/cases/compiler/nonMergedDeclarationsAndOverloads.ts(4,5): error TS2300: Duplicate identifier 'm1'.
tests/cases/compiler/nonMergedDeclarationsAndOverloads.ts(5,5): error TS2300: Duplicate identifier 'm1'.
tests/cases/compiler/nonMergedDeclarationsAndOverloads.ts(6,5): error TS2300: Duplicate identifier 'm1'.


==== tests/cases/compiler/nonMergedDeclarationsAndOverloads.ts (4 errors) ====
    class A {
        m1: string;
        ~~
!!! error TS2300: Duplicate identifier 'm1'.
        f() {}
        m1 (a: string): void;
        ~~
!!! error TS2300: Duplicate identifier 'm1'.
        m1 (a: number): void;
        ~~
!!! error TS2300: Duplicate identifier 'm1'.
        m1 (a: any): void {
        ~~
!!! error TS2300: Duplicate identifier 'm1'.
        }
    }